Tibubay, Flores and I conclude with the administrator login view

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -6,7 +6,8 @@
     background-color: rgb(31, 41, 55);
     color: white;
     padding: 20px;
-    border-radius: 10px;
+    border-radius: 0px;
+    width: 500px;
 }
 
 .input-field {
@@ -25,20 +26,21 @@
 .input-text {
     border-radius: 20px;
     color: gray;
-    width: 250px;
+    width: 320px;
     height: 30px;
 }
 
 .login-button {
     background-color: blue;
     color: white;
-    width: 350px;
+    width: 450px;
     height: 30px;
     border-radius: 20px;
     margin-top: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 50px;
 }
 
 .forgot-password-link {
@@ -65,4 +67,24 @@
     font-family: 'Times New Roman', serif;
     font-size: 24px;
     font-weight: bold;
+}
+
+.presentation-image {
+    width: 50%;
+    height: auto;
+    max-width: 100%;
+    display: block;
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 640px) {
+    .presentation-image {
+        display: none;
+    }
+}
+
+@media screen and (max-width: 640px) {
+    .blue-box {
+        width: 100%;
+    }
 }
